mygrammarParser.cpp

// Generated from mygrammar.g4 by ANTLR 4.13.2


#include "mygrammarVisitor.h"

#include "mygrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MygrammarParserStaticData final {
  MygrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MygrammarParserStaticData(const MygrammarParserStaticData&) = delete;
  MygrammarParserStaticData(MygrammarParserStaticData&&) = delete;
  MygrammarParserStaticData& operator=(const MygrammarParserStaticData&) = delete;
  MygrammarParserStaticData& operator=(MygrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mygrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MygrammarParserStaticData> mygrammarParserStaticData = nullptr;

void mygrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mygrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(mygrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MygrammarParserStaticData>(
    std::vector<std::string>{
      "expr", "bool_expr", "assignment", "increment", "decrement", "front_increment", 
      "front_decrement", "init", "operator_if", "cycle_while", "print_", 
      "line", "code"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'*'", "'/'", "'&&'", "'||'", "'!'", "'++'", "'--'", 
      "'{'", "'}'", "", "';'", "'='", "", "", "", "", "", "'if'", "'else'", 
      "'while'", "'print'", "'def'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "WS", "SEP", "ASSIGN", 
      "TYPE", "INT", "FLOAT", "COMP", "ADDSUB", "IF", "ELSE", "WHILE", "PRINT", 
      "DEF", "NAME"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mygrammarParserStaticData = std::move(staticData);
}

}

mygrammarParser::mygrammarParser(TokenStream *input) : mygrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

mygrammarParser::mygrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  mygrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mygrammarParserStaticData->atn, mygrammarParserStaticData->decisionToDFA, mygrammarParserStaticData->sharedContextCache, options);
}

mygrammarParser::~mygrammarParser() {
  delete _interpreter;
}

const atn::ATN& mygrammarParser::getATN() const {
  return *mygrammarParserStaticData->atn;
}

std::string mygrammarParser::getGrammarFileName() const {
  return "mygrammar.g4";
}

const std::vector<std::string>& mygrammarParser::getRuleNames() const {
  return mygrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& mygrammarParser::getVocabulary() const {
  return mygrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView mygrammarParser::getSerializedATN() const {
  return mygrammarParserStaticData->serializedATN;
}


//----------------- ExprContext ------------------------------------------------------------------

mygrammarParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::ExprContext::getRuleIndex() const {
  return mygrammarParser::RuleExpr;
}

void mygrammarParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FloatExprContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::FloatExprContext::FLOAT() {
  return getToken(mygrammarParser::FLOAT, 0);
}

mygrammarParser::FloatExprContext::FloatExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::FloatExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitFloatExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PreIncExprContext ------------------------------------------------------------------

mygrammarParser::Front_incrementContext* mygrammarParser::PreIncExprContext::front_increment() {
  return getRuleContext<mygrammarParser::Front_incrementContext>(0);
}

mygrammarParser::PreIncExprContext::PreIncExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PreIncExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPreIncExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntExprContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::IntExprContext::INT() {
  return getToken(mygrammarParser::INT, 0);
}

mygrammarParser::IntExprContext::IntExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::IntExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitIntExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PreDecExprContext ------------------------------------------------------------------

mygrammarParser::Front_decrementContext* mygrammarParser::PreDecExprContext::front_decrement() {
  return getRuleContext<mygrammarParser::Front_decrementContext>(0);
}

mygrammarParser::PreDecExprContext::PreDecExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PreDecExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPreDecExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::ExprContext *> mygrammarParser::AddSubExprContext::expr() {
  return getRuleContexts<mygrammarParser::ExprContext>();
}

mygrammarParser::ExprContext* mygrammarParser::AddSubExprContext::expr(size_t i) {
  return getRuleContext<mygrammarParser::ExprContext>(i);
}

tree::TerminalNode* mygrammarParser::AddSubExprContext::ADDSUB() {
  return getToken(mygrammarParser::ADDSUB, 0);
}

mygrammarParser::AddSubExprContext::AddSubExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::AddSubExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAddSubExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PostDecExprContext ------------------------------------------------------------------

mygrammarParser::DecrementContext* mygrammarParser::PostDecExprContext::decrement() {
  return getRuleContext<mygrammarParser::DecrementContext>(0);
}

mygrammarParser::PostDecExprContext::PostDecExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PostDecExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPostDecExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::ExprContext *> mygrammarParser::MulExprContext::expr() {
  return getRuleContexts<mygrammarParser::ExprContext>();
}

mygrammarParser::ExprContext* mygrammarParser::MulExprContext::expr(size_t i) {
  return getRuleContext<mygrammarParser::ExprContext>(i);
}

mygrammarParser::MulExprContext::MulExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::MulExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitMulExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DivExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::ExprContext *> mygrammarParser::DivExprContext::expr() {
  return getRuleContexts<mygrammarParser::ExprContext>();
}

mygrammarParser::ExprContext* mygrammarParser::DivExprContext::expr(size_t i) {
  return getRuleContext<mygrammarParser::ExprContext>(i);
}

mygrammarParser::DivExprContext::DivExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::DivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitDivExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

mygrammarParser::ExprContext* mygrammarParser::ParenExprContext::expr() {
  return getRuleContext<mygrammarParser::ExprContext>(0);
}

mygrammarParser::ParenExprContext::ParenExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NameExprContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::NameExprContext::NAME() {
  return getToken(mygrammarParser::NAME, 0);
}

mygrammarParser::NameExprContext::NameExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::NameExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitNameExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PostIncExprContext ------------------------------------------------------------------

mygrammarParser::IncrementContext* mygrammarParser::PostIncExprContext::increment() {
  return getRuleContext<mygrammarParser::IncrementContext>(0);
}

mygrammarParser::PostIncExprContext::PostIncExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PostIncExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPostIncExpr(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::ExprContext* mygrammarParser::expr() {
   return expr(0);
}

mygrammarParser::ExprContext* mygrammarParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  mygrammarParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  mygrammarParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 0;
  enterRecursionRule(_localctx, 0, mygrammarParser::RuleExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(38);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ParenExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(27);
      match(mygrammarParser::T__0);
      setState(28);
      expr(0);
      setState(29);
      match(mygrammarParser::T__1);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<NameExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(31);
      match(mygrammarParser::NAME);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<IntExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(32);
      match(mygrammarParser::INT);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<FloatExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(33);
      match(mygrammarParser::FLOAT);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<PostIncExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(34);
      increment();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<PostDecExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(35);
      decrement();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<PreDecExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(36);
      front_decrement();
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<PreIncExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(37);
      front_increment();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(51);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(49);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(40);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(41);
          match(mygrammarParser::T__2);
          setState(42);
          expr(11);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<DivExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(43);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(44);
          match(mygrammarParser::T__3);
          setState(45);
          expr(10);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<AddSubExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(46);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(47);
          match(mygrammarParser::ADDSUB);
          setState(48);
          expr(9);
          break;
        }

        default:
          break;
        } 
      }
      setState(53);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Bool_exprContext ------------------------------------------------------------------

mygrammarParser::Bool_exprContext::Bool_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::Bool_exprContext::getRuleIndex() const {
  return mygrammarParser::RuleBool_expr;
}

void mygrammarParser::Bool_exprContext::copyFrom(Bool_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParenBoolExprContext ------------------------------------------------------------------

mygrammarParser::Bool_exprContext* mygrammarParser::ParenBoolExprContext::bool_expr() {
  return getRuleContext<mygrammarParser::Bool_exprContext>(0);
}

mygrammarParser::ParenBoolExprContext::ParenBoolExprContext(Bool_exprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::ParenBoolExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitParenBoolExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NotExprContext ------------------------------------------------------------------

mygrammarParser::Bool_exprContext* mygrammarParser::NotExprContext::bool_expr() {
  return getRuleContext<mygrammarParser::Bool_exprContext>(0);
}

mygrammarParser::NotExprContext::NotExprContext(Bool_exprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::NotExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitNotExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::ExprContext *> mygrammarParser::CompExprContext::expr() {
  return getRuleContexts<mygrammarParser::ExprContext>();
}

mygrammarParser::ExprContext* mygrammarParser::CompExprContext::expr(size_t i) {
  return getRuleContext<mygrammarParser::ExprContext>(i);
}

tree::TerminalNode* mygrammarParser::CompExprContext::COMP() {
  return getToken(mygrammarParser::COMP, 0);
}

mygrammarParser::CompExprContext::CompExprContext(Bool_exprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::CompExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitCompExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OrExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::Bool_exprContext *> mygrammarParser::OrExprContext::bool_expr() {
  return getRuleContexts<mygrammarParser::Bool_exprContext>();
}

mygrammarParser::Bool_exprContext* mygrammarParser::OrExprContext::bool_expr(size_t i) {
  return getRuleContext<mygrammarParser::Bool_exprContext>(i);
}

mygrammarParser::OrExprContext::OrExprContext(Bool_exprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::OrExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitOrExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndExprContext ------------------------------------------------------------------

std::vector<mygrammarParser::Bool_exprContext *> mygrammarParser::AndExprContext::bool_expr() {
  return getRuleContexts<mygrammarParser::Bool_exprContext>();
}

mygrammarParser::Bool_exprContext* mygrammarParser::AndExprContext::bool_expr(size_t i) {
  return getRuleContext<mygrammarParser::Bool_exprContext>(i);
}

mygrammarParser::AndExprContext::AndExprContext(Bool_exprContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::AndExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAndExpr(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::Bool_exprContext* mygrammarParser::bool_expr() {
   return bool_expr(0);
}

mygrammarParser::Bool_exprContext* mygrammarParser::bool_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  mygrammarParser::Bool_exprContext *_localctx = _tracker.createInstance<Bool_exprContext>(_ctx, parentState);
  mygrammarParser::Bool_exprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, mygrammarParser::RuleBool_expr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CompExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(55);
      expr(0);
      setState(56);
      match(mygrammarParser::COMP);
      setState(57);
      expr(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<NotExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      match(mygrammarParser::T__6);
      setState(60);
      bool_expr(2);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ParenBoolExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(61);
      match(mygrammarParser::T__0);
      setState(62);
      bool_expr(0);
      setState(63);
      match(mygrammarParser::T__1);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(75);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(73);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<AndExprContext>(_tracker.createInstance<Bool_exprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleBool_expr);
          setState(67);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(68);
          match(mygrammarParser::T__4);
          setState(69);
          bool_expr(5);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<OrExprContext>(_tracker.createInstance<Bool_exprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleBool_expr);
          setState(70);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(71);
          match(mygrammarParser::T__5);
          setState(72);
          bool_expr(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(77);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

mygrammarParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::AssignmentContext::getRuleIndex() const {
  return mygrammarParser::RuleAssignment;
}

void mygrammarParser::AssignmentContext::copyFrom(AssignmentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignExprContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::AssignExprContext::NAME() {
  return getToken(mygrammarParser::NAME, 0);
}

tree::TerminalNode* mygrammarParser::AssignExprContext::ASSIGN() {
  return getToken(mygrammarParser::ASSIGN, 0);
}

mygrammarParser::ExprContext* mygrammarParser::AssignExprContext::expr() {
  return getRuleContext<mygrammarParser::ExprContext>(0);
}

mygrammarParser::AssignExprContext::AssignExprContext(AssignmentContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::AssignExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAssignExpr(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::AssignmentContext* mygrammarParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, mygrammarParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrammarParser::AssignExprContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(mygrammarParser::NAME);
    setState(79);
    match(mygrammarParser::ASSIGN);
    setState(80);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncrementContext ------------------------------------------------------------------

mygrammarParser::IncrementContext::IncrementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::IncrementContext::getRuleIndex() const {
  return mygrammarParser::RuleIncrement;
}

void mygrammarParser::IncrementContext::copyFrom(IncrementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PostIncContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::PostIncContext::NAME() {
  return getToken(mygrammarParser::NAME, 0);
}

mygrammarParser::PostIncContext::PostIncContext(IncrementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PostIncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPostInc(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::IncrementContext* mygrammarParser::increment() {
  IncrementContext *_localctx = _tracker.createInstance<IncrementContext>(_ctx, getState());
  enterRule(_localctx, 6, mygrammarParser::RuleIncrement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrammarParser::PostIncContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(mygrammarParser::NAME);
    setState(83);
    match(mygrammarParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecrementContext ------------------------------------------------------------------

mygrammarParser::DecrementContext::DecrementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::DecrementContext::getRuleIndex() const {
  return mygrammarParser::RuleDecrement;
}

void mygrammarParser::DecrementContext::copyFrom(DecrementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PostDecContext ------------------------------------------------------------------

tree::TerminalNode* mygrammarParser::PostDecContext::NAME() {
  return getToken(mygrammarParser::NAME, 0);
}

mygrammarParser::PostDecContext::PostDecContext(DecrementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PostDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPostDec(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::DecrementContext* mygrammarParser::decrement() {
  DecrementContext *_localctx = _tracker.createInstance<DecrementContext>(_ctx, getState());
  enterRule(_localctx, 8, mygrammarParser::RuleDecrement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrammarParser::PostDecContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(mygrammarParser::NAME);
    setState(86);
    match(mygrammarParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Front_incrementContext ------------------------------------------------------------------

mygrammarParser::Front_incrementContext::Front_incrementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::Front_incrementContext::getRuleIndex() const {
  return mygrammarParser::RuleFront_increment;
}

void mygrammarParser::Front_incrementContext::copyFrom(Front_incrementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}
